force-app/main/default/objects/Supplementary_Information__c/Supplementary_Information__c.object-meta.xml
<CustomObject>
    <label>Signing Information Form</label>
    <nameField>
        <displayFormat>SI{yyyy}{mm}{dd}{000000}</displayFormat>
        <label>补签信息表编号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Signing Information Form</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>