force-app/main/default/objects/Supplementary_Information__c/fields/Attendance__c.field-meta.xml
<CustomField>
    <fullName>Attendance__c</fullName>
    <label>考勤</label>
    <referenceTo>Promoter_Attendance__c</referenceTo>
    <relationshipLabel>补签信息表</relationshipLabel>
    <relationshipName>AttendanceMBRS</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>