force-app/main/default/objects/Supplementary_Information__c/fields/AttendanceUserType__c.field-meta.xml
<CustomField>
    <fullName>AttendanceUserType__c</fullName>
    <formula>Attendance__r.RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>*考勤用户类型</label>
    <type>Text</type>
</CustomField>