force-app/main/default/objects/Supplementary_Information__c/fields/Reson__c.field-meta.xml
<CustomField>
    <fullName>Reson__c</fullName>
    <label>补签原因</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>