force-app/main/default/objects/Supplementary_Information__c/fields/Shop__c.field-meta.xml
<CustomField>
    <fullName>Shop__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>补签门店</label>
    <referenceTo>Shop__c</referenceTo>
    <relationshipLabel>补签信息表</relationshipLabel>
    <relationshipName>Supplementary_Shop</relationshipName>
    <type>Lookup</type>
</CustomField>