force-app/main/default/objects/Supplementary_Information__c/fields/ShopFormula__c.field-meta.xml
<CustomField>
    <fullName>ShopFormula__c</fullName>
    <formula>IF(  ISBLANK(Shop__c) 
,IF( RecordType.DeveloperName == &apos;CheckInSupplementary&apos;, Attendance__r.Shop__r.Account__r.Name + Attendance__r.Shop__r.Name,  Attendance__r.CheckOutShop__r.Account__r.Name +  Attendance__r.CheckOutShop__r.Name ) 
,Shop__r.Account__r.Name +  Shop__r.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>*门店</label>
    <type>Text</type>
</CustomField>