force-app/main/default/objects/Supplementary_Information__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>(&quot;未提交补签申请&quot;)</defaultValue>
    <label>审批状态</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>已提交补签申请</fullName>
            </value>
            <value>
                <fullName>补签申请审批通过</fullName>
            </value>
            <value>
                <fullName>补签申请审批拒绝</fullName>
            </value>
            <value>
                <fullName>未提交补签申请</fullName>
                <default>true</default>
                <label>未提交补签申请</label>
            </value>
            <value>
                <fullName>完成</fullName>
                <isActive>false</isActive>
                <label>完成</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>