force-app/main/default/objects/Supplementary_Information__c/fields/Supplementary_SignOut_Time__c.field-meta.xml
<CustomField>
    <fullName>Supplementary_SignOut_Time__c</fullName>
    <label>补签签退时间</label>
    <type>Time</type>
</CustomField>