force-app/main/default/objects/Supplementary_Information__c/recordTypes/CheckInSupplementary.recordType-meta.xml
<RecordType>
    <fullName>CheckInSupplementary</fullName>
    <active>true</active>
    <label>签到补签</label>
</RecordType>