force-app/main/default/objects/Supplementary_Information__c/recordTypes/CheckOutSupplementary.recordType-meta.xml
<RecordType>
    <fullName>CheckOutSupplementary</fullName>
    <active>true</active>
    <label>签退补签</label>
</RecordType>