force-app/main/default/objects/Supplementary_Information__c/validationRules/AddCheckInRequireValue.validationRule-meta.xml
<ValidationRule>
    <fullName>AddCheckInRequireValue</fullName>
    <active>true</active>
    <description>提交补签时，补签时间及补签原因必填</description>
    <errorConditionFormula>AND( TEXT(Status__c) == &apos;已提交补签申请&apos;,
OR( ISBLANK(  Reson__c ),
   AND( RecordType.DeveloperName == &apos;CheckOutSupplementary&apos; , 
          ISBLANK( Supplementary_SignOut_Time__c)),
   AND( RecordType.DeveloperName == &apos;CheckInSupplementary&apos; , 
          ISBLANK( Supplementary_SignIn_Time__c ))
 )
)</errorConditionFormula>
    <errorMessage>提交补签时，补签时间及补签原因必填</errorMessage>
</ValidationRule>